# gnuplotxx

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: gnuplotxx-chaiscript.h  gnuplotxx.h
include/chaiscript/dispatchkit/: handle_return.hpp  type_conversions.hpp
include/chaiscript/language/: chaiscript_common.hpp  chaiscript_engine.hpp
src/: CMakeLists.txt  chaiscript.cpp  demo1.chai  demo1.cpp  demo2.chai  demo2.cpp  demo3.chai  demo3.cpp
